--- a/scripts/automation/regression/setups/trex22/benchmark.yaml
+++ b/scripts/automation/regression/setups/trex22/benchmark.yaml
@@ -152,6 +152,50 @@ test_CPU_benchmark:
         cpu_util        : 1
         bw_per_core     : 1
 
+test_performance_vm_single_cpu:
+    cfg:
+        mult                    : "90%"
+        mpps_per_core_golden    : 
+                                   min: 4.1
+                                   max: 5
+
+test_performance_vm_single_cpu_cached:
+    cfg:
+        mult                    : "10%"
+        mpps_per_core_golden    : 
+                                   min: 6.2
+                                   max: 7.7
+
+test_performance_syn_attack_single_cpu:
+     cfg:
+        mult                    : "90%"
+        mpps_per_core_golden    :
+                                  min: 3.5
+                                  max: 4.3
+
+test_performance_vm_multi_cpus:
+    cfg:
+        core_count             : 2
+        mult                   : "40%"
+        mpps_per_core_golden   :
+                                  min: 3.2
+                                  max: 4.1
+
+test_performance_vm_multi_cpus_cached:
+    cfg:
+        core_count             : 2
+        mult                   : "40%"
+        mpps_per_core_golden   :
+                                  min: 4.7
+                                  max: 5.8
+
+test_performance_syn_attack_multi_cpus:
+    cfg:
+        core_count             : 2
+        mult                   : "40%"
+        mpps_per_core_golden   :
+                                  min: 2.9
+                                  max: 3.6
 
 test_tcp_http :
     multiplier          : 1000
