--- a/scripts/automation/regression/setups/trex22/config.yaml
+++ b/scripts/automation/regression/setups/trex22/config.yaml
@@ -4,6 +4,7 @@
 
 trex:
   hostname       : csi-trex-22
-  cores          : 1
+  cores          : 2
+  astf_cores     : 1
   modes          : [VM, loopback, vf_nics]
 
