travis yml with multiple scripts
Signed-off-by: Elad Aharon <eaharon@cisco.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,12 @@ install:
   
 script:
   - python3 -u travis_files/wait_for_results.py $TRAVIS_PULL_REQUEST
+  - python3 -u travis_files/wait_for_results.py $TRAVIS_PULL_REQUEST
+  - python3 -u travis_files/wait_for_results.py $TRAVIS_PULL_REQUEST
+  - python3 -u travis_files/wait_for_results.py $TRAVIS_PULL_REQUEST
+  - python3 -u travis_files/wait_for_results.py $TRAVIS_PULL_REQUEST
+  - python3 -u travis_files/wait_for_results.py $TRAVIS_PULL_REQUEST
+
 
 after_script:
   - bash travis_files/deploy.sh
