--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,44 @@
-language: python
+jobs:
+  include:
+    - stage: 1st check
+      language: python
+      python: "3.6"
+      cache: pip
+      install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
+      script: python3 -u wait_for_results.py $TRAVIS_PULL_REQUEST False
+      after_script: bash travis_files/deploy.sh
 
-python:
-  - "3.6"
+    - stage: 2nd check
+      language: python
+      python: "3.6"
+      cache: pip
+      install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
+      script: python3 -u wait_for_results.py $TRAVIS_PULL_REQUEST False
+      after_script: bash travis_files/deploy.sh
 
-cache:
-  - pip
+    - stage: 3rd check
+      language: python
+      python: "3.6"
+      cache: pip
+      install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
+      script: python3 -u wait_for_results.py $TRAVIS_PULL_REQUEST False
+      after_script: bash travis_files/deploy.sh
 
-install:
-  - pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
-  
-script:
-  - python3 -u travis_files/wait_for_results.py $TRAVIS_PULL_REQUEST
+    - stage: 4th check
+      language: python
+      python: "3.6"
+      cache: pip
+      install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
+      script: python3 -u wait_for_results.py $TRAVIS_PULL_REQUEST False
+      after_script: bash travis_files/deploy.sh
 
-after_script:
-  - bash travis_files/deploy.sh
+    - stage: 5th check
+      language: python
+      python: "3.6"
+      cache: pip
+      install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
+      script: python3 -u wait_for_results.py $TRAVIS_PULL_REQUEST True
+      after_script: bash travis_files/deploy.sh
+
+
+
