--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jobs:
       python: "3.6"
       cache: pip
       install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
-      script: python3 -u wait_for_results.py $TRAVIS_PULL_REQUEST False
+      script: python3 -u travis_files/wait_for_results.py $TRAVIS_PULL_REQUEST False
       after_script: bash travis_files/deploy.sh
 
     - stage: 2nd check
@@ -13,7 +13,7 @@ jobs:
       python: "3.6"
       cache: pip
       install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
-      script: python3 -u wait_for_results.py $TRAVIS_PULL_REQUEST False
+      script: python3 -u travis_files/wait_for_results.py $TRAVIS_PULL_REQUEST False
       after_script: bash travis_files/deploy.sh
 
     - stage: 3rd check
@@ -21,7 +21,7 @@ jobs:
       python: "3.6"
       cache: pip
       install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
-      script: python3 -u wait_for_results.py $TRAVIS_PULL_REQUEST False
+      script: python3 -u travis_files/wait_for_results.py $TRAVIS_PULL_REQUEST False
       after_script: bash travis_files/deploy.sh
 
     - stage: 4th check
@@ -29,7 +29,7 @@ jobs:
       python: "3.6"
       cache: pip
       install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
-      script: python3 -u wait_for_results.py $TRAVIS_PULL_REQUEST False
+      script: python3 -u travis_files/wait_for_results.py $TRAVIS_PULL_REQUEST False
       after_script: bash travis_files/deploy.sh
 
     - stage: 5th check
@@ -37,7 +37,7 @@ jobs:
       python: "3.6"
       cache: pip
       install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
-      script: python3 -u wait_for_results.py $TRAVIS_PULL_REQUEST True
+      script: python3 -u travis_files/wait_for_results.py $TRAVIS_PULL_REQUEST True
       after_script: bash travis_files/deploy.sh
 
 
