--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ env:
   global:
     - SHA=$TRAVIS_PULL_REQUEST_SHA
     - PR_NUM=$TRAVIS_PULL_REQUEST
+    - IS_LAST=False
 jobs:
   include:
     - stage: 1st check
@@ -10,7 +11,7 @@ jobs:
       cache: pip
       install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
       script:
-        - python3 -u travis_files/wait_for_results.py --last-check False
+        - python3 -u travis_files/wait_for_results.py
         - bash travis_files/deploy.sh
 
     - stage: 2nd check
@@ -19,7 +20,7 @@ jobs:
       cache: pip
       install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
       script:
-        - python3 -u travis_files/wait_for_results.py --last-check False
+        - python3 -u travis_files/wait_for_results.py
         - bash travis_files/deploy.sh
 
     - stage: 3rd check
@@ -28,7 +29,7 @@ jobs:
       cache: pip
       install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
       script:
-        - python3 -u travis_files/wait_for_results.py --last-check False
+        - python3 -u travis_files/wait_for_results.py
         - bash travis_files/deploy.sh
 
     - stage: 4th check
@@ -37,7 +38,7 @@ jobs:
       cache: pip
       install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
       script:
-        - python3 -u travis_files/wait_for_results.py --last-check False
+        - python3 -u travis_files/wait_for_results.py
         - bash travis_files/deploy.sh
 
     - stage: 5th check
@@ -46,7 +47,7 @@ jobs:
       cache: pip
       install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
       script:
-        - python3 -u travis_files/wait_for_results.py --last-check False
+        - python3 -u travis_files/wait_for_results.py
         - bash travis_files/deploy.sh
 
     - stage: 6th check
@@ -55,5 +56,6 @@ jobs:
       cache: pip
       install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
       script:
-        - python3 -u travis_files/wait_for_results.py --last-check True
+        - export IS_LAST=True
+        - python3 -u travis_files/wait_for_results.py
         - bash travis_files/deploy.sh
