Adding DO_NOT_CHECK symbol to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,53 +3,56 @@ env:
     - SHA=$TRAVIS_PULL_REQUEST_SHA
     - PR_NUM=$TRAVIS_PULL_REQUEST
     - IS_LAST=False
-jobs:
-  include:
-    - stage: 1st check
-      language: python
-      python: "3.6"
-      cache: pip
-      install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
-      script:
-        - python3 -u travis_files/wait_for_results.py
+    - DONT_CHECK=#do_not_check
+  
+if [[ DONT_CHECK == *$TRAVIS_COMMIT_MESSAGE*  ]]; then
+  echo DONT_CHECK symbol activated, exiting
+  
+else:
+  jobs:
+    include:
+      - stage: 1st check
+        language: python
+        python: "3.6"
+        cache: pip
+        install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
+        script: python3 -u travis_files/wait_for_results.py
 
-    - stage: 2nd check
-      language: python
-      python: "3.6"
-      cache: pip
-      install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
-      script:
-        - python3 -u travis_files/wait_for_results.py
+      - stage: 2nd check
+        language: python
+        python: "3.6"
+        cache: pip
+        install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
+        script: python3 -u travis_files/wait_for_results.py
 
-    - stage: 3rd check
-      language: python
-      python: "3.6"
-      cache: pip
-      install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
-      script:
-        - python3 -u travis_files/wait_for_results.py
+      - stage: 3rd check
+        language: python
+        python: "3.6"
+        cache: pip
+        install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
+        script: python3 -u travis_files/wait_for_results.py
 
-    - stage: 4th check
-      language: python
-      python: "3.6"
-      cache: pip
-      install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
-      script:
-        - python3 -u travis_files/wait_for_results.py
+      - stage: 4th check
+        language: python
+        python: "3.6"
+        cache: pip
+        install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
+        script:
+          - python3 -u travis_files/wait_for_results.py
 
-    - stage: 5th check
-      language: python
-      python: "3.6"
-      cache: pip
-      install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
-      script:
-        - python3 -u travis_files/wait_for_results.py
+      - stage: 5th check
+        language: python
+        python: "3.6"
+        cache: pip
+        install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
+        script: python3 -u travis_files/wait_for_results.py
 
-    - stage: 6th check
-      language: python
-      python: "3.6"
-      cache: pip
-      install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
-      script:
-        - export IS_LAST=True
-        - python3 -u travis_files/wait_for_results.py
+      - stage: 6th check
+        language: python
+        python: "3.6"
+        cache: pip
+        install: pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
+        script:
+          - export IS_LAST=True
+          - python3 -u travis_files/wait_for_results.py
+fi
