--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ linux_dpdk/trex-64.bz2
 linux_dpdk/*.html
 linux_dpdk/cov-int/*
 *.vscode
+trex.code-workspace
+*.clangd
+compile_commands.json
 
 linux/.waf*
 linux/build*
