--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # python path 
-PYTHONPATH="scripts/automation/trex_control_plane/interactive/"
+PYTHONPATH="scripts/automation/trex_control_plane/interactive/:scripts/automation/:scripts/external_libs/scapy-2.3.1/python3:scripts/external_libs/dpkt-1.9.1:scripts/external_libs/repoze:scripts/external_libs/simpy-3.0.10"
+
 
