adding "no_resilience" mode for trex04,11,16 low mem issues fix test_9k_stream on trex14 to allow some drops
Signed-off-by: Elad Aharon <eaharon@cisco.com>

--- a/scripts/automation/regression/setups/trex04/config.yaml
+++ b/scripts/automation/regression/setups/trex04/config.yaml
@@ -39,4 +39,4 @@ trex:
   hostname       : csi-trex-04
   cores          : 2 
   astf_cores     : 1
-  modes          : [loopback, virt_nics, VM]
+  modes          : [loopback, virt_nics, VM, 'no_resilience']
