--- a/scripts/automation/regression/setups/trex16/config.yaml
+++ b/scripts/automation/regression/setups/trex16/config.yaml
@@ -4,4 +4,4 @@
 trex:
   hostname       : csi-trex-16
   cores          : 1
-  modes          : [loopback, virt_nics, VM, vdev, lowend]
+  modes          : [loopback, virt_nics, VM, vdev, lowend, 'no_resilience']
