add "switch" mode to ESXI for test_random_dynamic_add_remove
Signed-off-by: Elad Aharon <eaharon@cisco.com>

--- a/scripts/automation/regression/setups/trex06/config.yaml
+++ b/scripts/automation/regression/setups/trex06/config.yaml
@@ -36,4 +36,4 @@
 trex:
   hostname       : csi-trex-06
   cores          : 1
-  modes          : [loopback, virt_nics, VM]
+  modes          : [loopback, virt_nics, VM, switch]
