--- a/scripts/automation/regression/setups/trex03/config.yaml
+++ b/scripts/automation/regression/setups/trex03/config.yaml
@@ -1,4 +1,4 @@
 trex:
   hostname       : csi-trex-03
   cores          : 1
-  modes          : [loopback, virt_nics, VM]
+  modes          : [loopback, virt_nics, VM, switch]
