--- a/scripts/automation/regression/setups/trex11/config.yaml
+++ b/scripts/automation/regression/setups/trex11/config.yaml
@@ -36,6 +36,6 @@
 trex:
   hostname       : csi-trex-11
   cores          : 1
-  modes          : ['loopback', 'VM', 'no_resilience']
+  modes          : ['loopback', 'VM', no_resilience, switch]
 
 
