--- a/scripts/automation/regression/setups/trex24/config.yaml
+++ b/scripts/automation/regression/setups/trex24/config.yaml
@@ -35,5 +35,5 @@
 trex:
   hostname       : csi-trex-24
   cores          : 1
-  modes          : [VM, virt_nics, loopback]
+  modes          : [VM, virt_nics, loopback, switch]
 
