Add EMU mode to regression.
-- Add Emu mode to regression
-- Add basic ARP/ICMP tests to regression.
-- Add Emu mode to TRex14.

Signed-off-by: Besart Dollma <bdollma@cisco.com>

--- a/scripts/automation/regression/setups/trex14/config.yaml
+++ b/scripts/automation/regression/setups/trex14/config.yaml
@@ -36,7 +36,7 @@
 trex:
   hostname       : csi-trex-14
   cores          : 4
-  modes: ['bird']
+  modes: ['bird', 'emu']
 
 router:
   model          : ASR1001x
