benchmark: remove some old tests
Signed-off-by: Hanoh Haim <hhaim@cisco.com>

--- a/scripts/automation/regression/setups/trex14/benchmark.yaml
+++ b/scripts/automation/regression/setups/trex14/benchmark.yaml
@@ -106,15 +106,15 @@ test_rx_check_http_negative_disabled:
     nat_dict            : *nat_dict
 
 
-test_rx_check_sfr: &rx_sfr
-    multiplier          : 10
-    cores               : 3
-    rx_sample_rate      : 16
-    bw_per_core         : 16.082
+#test_rx_check_sfr: &rx_sfr
+#    multiplier          : 10
+#    cores               : 3
+#    rx_sample_rate      : 16
+#    bw_per_core         : 16.082
 
-test_rx_check_sfr_ipv6:
-    <<                  : *rx_sfr
-    bw_per_core         : 19.198
+#test_rx_check_sfr_ipv6:
+#    <<                  : *rx_sfr
+#    bw_per_core         : 19.198
 
 
 
