--- a/scripts/automation/regression/setups/trex11/benchmark.yaml
+++ b/scripts/automation/regression/setups/trex11/benchmark.yaml
@@ -44,15 +44,15 @@ test_rx_check_http_ipv6:
     <<                  : *rx_http
     bw_per_core         : 49.237
 
-test_rx_check_sfr: &rx_sfr
-    multiplier          : 0.5
-    cores               : 1
-    rx_sample_rate      : 128
-    bw_per_core         : 20.9
+# test_rx_check_sfr: &rx_sfr
+#     multiplier          : 0.5
+#     cores               : 1
+#     rx_sample_rate      : 128
+#     bw_per_core         : 20.9
 
-test_rx_check_sfr_ipv6:
-    <<                  : *rx_sfr
-    bw_per_core         : 23.9
+# test_rx_check_sfr_ipv6:
+#     <<                  : *rx_sfr
+#     bw_per_core         : 23.9
 
 
 ### stateless ###
