--- a/scripts/bird/cfg/bgp_filter.conf
+++ b/scripts/bird/cfg/bgp_filter.conf
@@ -9,7 +9,13 @@ protocol bgp my_bgp1 {
     neighbor 1.1.1.1 as 65000;  # put your dut ip and as number here
     ipv4 {
         import all;
-        export all;
+        export filter {
+                # only locally originating routes
+                if gw = 1.1.1.3 then
+                    accept;
+                else
+                    reject;
+            };
     };
 }
 
@@ -19,6 +25,12 @@ protocol bgp my_bgp2 {
     neighbor 1.1.2.1 as 65000;
     ipv4 {
         import all;
-        export all;
+        export filter {
+                print from;
+                if gw = 1.1.2.3 then
+                    accept;
+                else
+                    reject;
+            };
     };
 }
