GTPU mode is enabled/disabled via RPC command More than 2 ports support Non GTPU packets will not be generated in GTPU mode Source port was added to the update_tunnel_client_record API
Signed-off-by: syaakov <syaakov@cisco.com>

--- a/scripts/automation/regression/setups/trex04/config.yaml
+++ b/scripts/automation/regression/setups/trex04/config.yaml
@@ -40,3 +40,4 @@ trex:
   cores          : 2 
   astf_cores     : 1
   modes          : [loopback, virt_nics, VM, no_resilience, switch]
+  trex_add_args  : '--tso-disable'
