--- a/scripts/automation/regression/setups/trex07/config.yaml
+++ b/scripts/automation/regression/setups/trex07/config.yaml
@@ -34,7 +34,7 @@
 # expected_bw    - the "golden" bandwidth (in Gbps) results planned on receiving from the test
 
 trex:
-  hostname       : TPC-E16-12-001
+  hostname       : csi-trex-07
   cores          : 8
   modes          : ['loopback']
 
