--- a/scripts/automation/regression/setups/trex09/benchmark.yaml
+++ b/scripts/automation/regression/setups/trex09/benchmark.yaml
@@ -233,20 +233,40 @@ test_performance_syn_attack_multi_cpus:
                                   max: 12.4
 
 test_tcp_http :
-    multiplier          : 40000
-    cores               : 2
-    bw_per_core         : 20
+    multiplier           : 40000
+    mpps_per_core_golden :
+                            min: 1.8
+                            max: 2.6
 
+test_udp_pcap :
+    multiplier           : 4000000
+    mpps_per_core_golden :
+                            min: 1.2
+                            max: 2.0
 
 test_ipv6_tcp_http :
-    multiplier          : 30000
-    cores               : 2
-    bw_per_core         : 20
+    multiplier           : 40000
+    mpps_per_core_golden :
+                            min: 1.4
+                            max: 2.4
+
+test_ipv6_udp_pcap :
+    multiplier           : 4000000
+    mpps_per_core_golden :
+                            min: 1.2
+                            max: 2.0
 
 test_tcp_sfr :
-    multiplier          : 40
-    cores               : 2
-    bw_per_core         : 20
+    multiplier          : 50
+    mpps_per_core_golden :
+                            min: 1.6
+                            max: 2.4
+
+test_tcp_udp_sfr :
+    multiplier          : 100
+    mpps_per_core_golden :
+                            min: 1.6
+                            max: 2.4
     
 test_tcp_sfr_no_crash :
     multiplier          : 60
