arm: update zmq version
Updating ARM zmq version to be in sync with x86.

--- a/scripts/so/.gitignore
+++ b/scripts/so/.gitignore
@@ -2,5 +2,10 @@
 *
 # Except those files:
 !.gitignore
-!libzmq*
-!libstd*
+# Allow all directories (so we can traverse into them)
+!*/
+# But ignore everything in subdirectories
+*/*
+# Except libzmq and libstd files in any subdirectory
+!*/libzmq*
+!*/libstd*
